--- a/src/resources/views/Sell.fxml
+++ b/src/resources/views/Sell.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTextField?>
@@ -11,10 +12,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.ToggleGroup?>
 
-<?import com.jfoenix.controls.JFXTogglePane?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.sellController">
     <children>
         <Text layoutX="421.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SITHUMI TRADINGS" x="50.0" y="50.0" AnchorPane.bottomAnchor="586.0" AnchorPane.leftAnchor="471.0" AnchorPane.rightAnchor="470.4501953125" AnchorPane.topAnchor="23.0">
@@ -42,16 +40,28 @@
                 <Font size="27.0" />
             </font>
         </JFXButton>
-        <AnchorPane layoutX="804.0" layoutY="100.0" prefHeight="250.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
+        <AnchorPane fx:id="invoicepane" layoutX="804.0" layoutY="100.0" prefHeight="260.0" prefWidth="505.0" style="-fx-background-color: #9bedf2; -fx-background-radius: 20;">
             <children>
-                <JFXDatePicker fx:id="date" layoutX="43.0" layoutY="14.0" onMouseEntered="#getToday" prefHeight="28.0" prefWidth="180.0" promptText="Date" />
-                <JFXTextField fx:id="invoiceid" layoutX="43.0" layoutY="55.0" prefHeight="25.0" prefWidth="180.0" promptText="Invoice ID" />
-                <JFXTextField fx:id="shopid" layoutX="43.0" layoutY="95.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop ID" />
-                <JFXTextField fx:id="shopname" editable="false" layoutX="287.0" layoutY="95.0" onMouseClicked="#getName" prefHeight="25.0" prefWidth="180.0" promptText="Shop Name" />
+                <JFXDatePicker fx:id="date" layoutX="43.0" layoutY="29.0" onMouseEntered="#getToday" prefHeight="28.0" prefWidth="180.0" promptText="Date" />
+                <JFXTextField fx:id="currinvoice" layoutX="43.0" layoutY="70.0" prefHeight="25.0" prefWidth="180.0" promptText="Invoice ID" />
+                <JFXComboBox fx:id="shopid" layoutX="43.0" layoutY="113.0"  onAction="#fillShopCombo" prefHeight="26.0" prefWidth="180.0" promptText="Shop ID" />
+                <!--<JFXTextField fx:id="shopid" layoutX="268.0" layoutY="77.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop ID" />-->
+                <!--<JFXTextField fx:id="shopname" editable="false" layoutX="287.0" layoutY="112.0" onMouseClicked="#getName" prefHeight="25.0" prefWidth="180.0" promptText="Shop Name" />-->
+                <JFXRadioButton fx:id="cash" layoutX="289.0" layoutY="54.0" onMouseClicked="#paymode" selected="true" text="Cash" />
+                <JFXRadioButton fx:id="cheque" layoutX="384.0" layoutY="54.0" onMouseClicked="#paymode" text="Cheque" />
+                <JFXComboBox fx:id="cheque_no" layoutX="286.0" layoutY="80.0" prefHeight="26.0" prefWidth="180.0" promptText="Select Cheque ID" />
 
-
-
-                <JFXButton fx:id="addinvoice" layoutX="377.0" layoutY="230.0" onMouseClicked="#addInvoice" prefHeight="32.0" prefWidth="86.0" style="-fx-background-color: #2bf246;" text="Add" />
+                <JFXButton fx:id="addinvoice" layoutX="333.0" layoutY="213.0" onMouseClicked="#addInvoice" prefHeight="32.0" prefWidth="130.0" style="-fx-background-color: #2bf246;" text="Save Invoice" />
+            <JFXButton id="addcheque" fx:id="addinvoice1" layoutX="376.0" layoutY="117.0" onAction="#addChequeDialog"  prefHeight="26.0" prefWidth="94.0" style="-fx-background-color: grey;" text="Add Cheque" textFill="WHITE">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </JFXButton>
+            <Text layoutX="239.0" layoutY="-12.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pay Mode" wrappingWidth="78.00001457333565" x="50.0" y="50.0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
 
             </children>
 
