--- a/src/resources/views/shops.fxml
+++ b/src/resources/views/shops.fxml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.shopController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.shopController">
    <children>
       <Pane layoutX="21.0" layoutY="167.0" prefHeight="445.0" prefWidth="756.0" styleClass="formbody" stylesheets="@../styles/main.css" />
       <TableView fx:id="shopTable" layoutX="38.0" layoutY="193.0" onMouseClicked="#getSelected" prefHeight="395.0" prefWidth="718.0">
@@ -33,20 +30,20 @@
          <children>
             <JFXTextField fx:id="u_shopId" editable="false" layoutX="43.0" layoutY="16.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop Id" />
             <JFXTextField fx:id="u_name" layoutX="43.0" layoutY="64.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
-            <JFXTextField fx:id="u_type" layoutX="43.0" layoutY="111.0" prefHeight="25.0" prefWidth="180.0" promptText="Type" />
             <JFXTextField fx:id="u_contact" layoutX="43.0" layoutY="160.0" prefHeight="25.0" prefWidth="180.0" promptText="Contact" />
             <JFXTextField fx:id="u_address" layoutX="283.0" layoutY="160.0" prefHeight="25.0" prefWidth="180.0" promptText="Address" />
             <JFXButton fx:id="update" layoutX="377.0" layoutY="193.0" onMouseClicked="#updateItem" prefHeight="32.0" prefWidth="86.0" styleClass="button2" stylesheets="@../styles/main.css" text="Update" />
+            <JFXComboBox fx:id="u_type" layoutX="43.0" layoutY="117.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop type" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="794.0" layoutY="437.0" prefHeight="234.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
          <children>
-            <JFXTextField fx:id="a_shopId" layoutX="40.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop Id" />
-            <JFXTextField fx:id="a_name" layoutX="40.0" layoutY="60.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
-            <JFXTextField fx:id="a_type" layoutX="40.0" layoutY="107.0" prefHeight="25.0" prefWidth="180.0" promptText="Type" />
-            <JFXTextField fx:id="a_contact" layoutX="40.0" layoutY="156.0" prefHeight="25.0" prefWidth="180.0" promptText="Contact" />
-            <JFXTextField fx:id="a_address" layoutX="280.0" layoutY="156.0" prefHeight="25.0" prefWidth="180.0" promptText="Address" />
+            <JFXTextField fx:id="a_shopId" layoutX="40.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop Id" visible="false" />
+            <JFXTextField fx:id="a_name" layoutX="43.0" layoutY="37.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
+            <JFXTextField fx:id="a_contact" layoutX="43.0" layoutY="133.0" prefHeight="25.0" prefWidth="180.0" promptText="Contact" />
+            <JFXTextField fx:id="a_address" layoutX="283.0" layoutY="133.0" prefHeight="25.0" prefWidth="180.0" promptText="Address" />
             <JFXButton fx:id="add" layoutX="375.0" layoutY="190.0" onMouseClicked="#addShop" prefHeight="32.0" prefWidth="86.0" styleClass="button2" stylesheets="@../styles/main.css" text="Add" />
+            <JFXComboBox fx:id="a_type" layoutX="43.0" layoutY="87.0" prefHeight="25.0" prefWidth="180.0" promptText="Shop type" />
          </children>
       </AnchorPane>
       <JFXButton fx:id="back" layoutX="39.0" layoutY="621.0" onMouseClicked="#backMenu" prefHeight="49.0" prefWidth="148.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
