--- a/src/resources/views/alert/saveSuccess.fxml
+++ b/src/resources/views/alert/saveSuccess.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.alert.saveSuccess">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.alert.saveSuccess">
     <children>
         <ImageView fitHeight="55.0" fitWidth="66.0" layoutX="73.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -19,6 +19,6 @@
                 <Font size="25.0" />
             </font>
         </Text>
-        <JFXButton fx:id="close" layoutX="297.0" layoutY="108.0" onAction="#close" prefHeight="25.0" prefWidth="69.0" style="-fx-background-color: #f7112c;" text="Close" />
+        <JFXButton fx:id="close" layoutX="398.0" layoutY="102.0" onAction="#close" prefHeight="25.0" prefWidth="69.0" style="-fx-background-color: #f7112c;" styleClass="buttondelete" stylesheets="@../../styles/main.css" text="Close" />
     </children>
 </AnchorPane>
