--- a/src/resources/views/items.fxml
+++ b/src/resources/views/items.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,41 +7,34 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.itemController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="689.0" prefWidth="1355.0" styleClass="body" stylesheets="@../styles/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.itemController">
    <children>
-      <Pane layoutX="17.0" layoutY="143.0" prefHeight="458.0" prefWidth="749.0" styleClass="formbody" stylesheets="@../styles/main.css" />
-      <TableView fx:id="itemTable" layoutX="31.0" layoutY="158.0" onMouseClicked="#getSelected" prefHeight="429.0" prefWidth="720.0">
+      <Pane layoutX="17.0" layoutY="143.0" prefHeight="426.0" prefWidth="1322.0" styleClass="formbody" stylesheets="@../styles/main.css">
+         <children>
+            <JFXButton fx:id="update" layoutX="1094.0" layoutY="377.0" onMouseClicked="#updateItem" prefHeight="32.0" prefWidth="100.0" styleClass="button2" stylesheets="@../styles/main.css" text="Update" />
+            <JFXButton fx:id="add" layoutX="982.0" layoutY="377.0" onMouseClicked="#addItem" prefHeight="37.0" prefWidth="100.0" styleClass="button2" stylesheets="@../styles/main.css" text="Add" />
+            <JFXTextField fx:id="a_itemId" layoutX="14.0" layoutY="381.0" prefHeight="31.0" prefWidth="138.0" promptText="Item Id" />
+            <JFXTextField fx:id="a_name" layoutX="164.0" layoutY="381.0" prefHeight="31.0" prefWidth="357.0" promptText="Name" />
+            <JFXTextField fx:id="a_quantity" layoutX="532.0" layoutY="381.0" prefHeight="31.0" prefWidth="122.0" promptText="Quantity" />
+            <JFXTextField fx:id="a_buyPrice" layoutX="682.0" layoutY="381.0" prefHeight="31.0" prefWidth="129.0" promptText="Buy Price" />
+            <JFXTextField fx:id="a_sellPrice" layoutX="834.0" layoutY="379.0" prefHeight="31.0" prefWidth="138.0" promptText="Sell Price" />
+            <JFXButton fx:id="delete" layoutX="1209.0" layoutY="377.0" onMouseClicked="#deleteItem" prefHeight="32.0" prefWidth="100.0" styleClass="buttondelete" stylesheets="@../styles/main.css" text="Delete" />
+         </children></Pane>
+      <TableView fx:id="itemTable" editable="true" layoutX="31.0" layoutY="158.0" onMouseClicked="#getSelected" prefHeight="336.0" prefWidth="1295.0">
         <columns>
-          <TableColumn fx:id="item_no" prefWidth="101.0" text="Item_no" />
-          <TableColumn fx:id="name" prefWidth="192.0" text="Name" />
-            <TableColumn fx:id="quantity" prefWidth="124.0" text="Quantity" />
-            <TableColumn fx:id="buyPrice" prefWidth="152.0" text="Buy Price" />
-            <TableColumn fx:id="sellPrice" prefWidth="155.0" text="Sell Price" />
+          <TableColumn fx:id="item_no" prefWidth="90.0" text="Item_no" />
+          <TableColumn fx:id="name" prefWidth="532.0" text="Name" />
+            <TableColumn fx:id="quantity" prefWidth="229.0" text="Quantity" />
+            <TableColumn fx:id="buyPrice" prefWidth="225.0" text="Buy Price" />
+            <TableColumn fx:id="sellPrice" prefWidth="218.0" text="Sell Price" />
         </columns>
       </TableView>
-      <AnchorPane layoutX="804.0" layoutY="149.0" prefHeight="250.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
-         <children>
-            <JFXTextField fx:id="u_itemId" editable="false" layoutX="43.0" layoutY="16.0" prefHeight="25.0" prefWidth="180.0" promptText="Item Id" />
-            <JFXTextField fx:id="u_name" layoutX="43.0" layoutY="64.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
-            <JFXTextField fx:id="u_quantity" layoutX="43.0" layoutY="111.0" prefHeight="25.0" prefWidth="180.0" promptText="Quantity" />
-            <JFXTextField fx:id="u_buyPrice" layoutX="43.0" layoutY="160.0" prefHeight="25.0" prefWidth="180.0" promptText="Buy Price" />
-            <JFXTextField fx:id="u_sellPrice" layoutX="283.0" layoutY="160.0" prefHeight="25.0" prefWidth="180.0" promptText="Sell Price" />
-            <JFXButton fx:id="update" layoutX="369.0" layoutY="205.0" onMouseClicked="#updateItem" prefHeight="32.0" prefWidth="100.0" styleClass="button2" stylesheets="@../styles/main.css" text="Update" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="803.0" layoutY="426.0" prefHeight="234.0" prefWidth="505.0" styleClass="formbody" stylesheets="@../styles/main.css">
-         <children>
-            <JFXTextField fx:id="a_itemId" layoutX="40.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" promptText="Item Id" />
-            <JFXTextField fx:id="a_name" layoutX="40.0" layoutY="60.0" prefHeight="25.0" prefWidth="180.0" promptText="Name" />
-            <JFXTextField fx:id="a_quantity" layoutX="40.0" layoutY="107.0" prefHeight="25.0" prefWidth="180.0" promptText="Quantity" />
-            <JFXTextField fx:id="a_buyPrice" layoutX="40.0" layoutY="156.0" prefHeight="25.0" prefWidth="180.0" promptText="Buy Price" />
-            <JFXTextField fx:id="a_sellPrice" layoutX="280.0" layoutY="156.0" prefHeight="25.0" prefWidth="180.0" promptText="Sell Price" />
-            <JFXButton fx:id="add" layoutX="361.0" layoutY="190.0" onMouseClicked="#addItem" prefHeight="37.0" prefWidth="100.0" styleClass="button2" stylesheets="@../styles/main.css" text="Add" />
-         </children>
-      </AnchorPane>
       <JFXButton fx:id="back" layoutX="19.0" layoutY="618.0" onMouseClicked="#backMenu" prefHeight="52.0" prefWidth="178.0" styleClass="button1" stylesheets="@../styles/main.css" text="Back">
          <graphic>
              <ImageView fitHeight="37.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
